Added short versions of captions to figures.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.46 2009/09/28 16:03:43 ith Exp $
+% $Id: dbi-intro.tex,v 1.47 2009/10/05 15:52:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.46 2009/09/28 16:03:43 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.47 2009/10/05 15:52:09 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -470,7 +470,8 @@ $S^2\times S^3$, where the $S^2$ is fibred over the $S^3$.
 \begin{figure}
 \centering
 \includegraphics{dbi/graphs/deformed-conifold}   
-\caption{A conifold can be deformed to remove the singularity at the tip.}
+\caption[Deformed Conifold]{A conifold can be deformed to remove the singularity at
+the tip.}
 \label{fig:conifold-dbiintro}
 \end{figure}
 
@@ -527,7 +528,8 @@ equation for the inflaton is determined by a DBI action.
 \begin{figure}
  \centering
  \includegraphics[width=\textwidth]{dbi/graphs/cymanifold}
- \caption{A representation of the Calabi-Yau manifold in the 6 compactified
+ \caption[Calabi-Yau Manifold]{A representation of the Calabi-Yau manifold in the 6
+compactified
 dimensions. Throats are connected to the main bulk. D3-branes appear as dots.}
  \label{fig:braneworld}
 \end{figure}
