--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.47 2009/09/28 16:03:43 ith Exp $
+% $Id: dbi.tex,v 1.48 2009/10/05 15:52:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.47 2009/09/28 16:03:43 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.48 2009/10/05 15:52:09 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -129,9 +129,9 @@ in Figure~\ref{fig:throat-geom}.
  \centering
  \includegraphics{./dbi/graphs/throat-geom.pdf}
  % throat-geom.pdf: 432x288 pixel, 72dpi, 15.24x10.16 cm, bb=0 0 432 288
- \caption{Geometry of the warped throat. The radial coordinate $\rho$ is
-measured from the tip of the throat to $\rho_{UV}$ at the join with the bulk
-manifold.}
+ \caption[Warped Throat Geometry]{Geometry of the warped throat. The radial
+coordinate $\rho$ is measured from the tip of the throat to $\rho_{UV}$ at the join
+with the bulk manifold.}
  \label{fig:throat-geom}
 \end{figure}
 
