--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.45 2009/09/28 16:03:43 ith Exp $
+% $Id: mainintro.tex,v 1.46 2009/10/05 15:52:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.45 2009/09/28 16:03:43 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.46 2009/10/05 15:52:09 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -447,7 +447,8 @@ scales we measure today were previously inside the horizon.
 % 
 \begin{figure}
  \includegraphics[width=\textwidth]{graphs/scales.pdf}
- \caption{Comoving scales that have recently entered the horizon would
+ \caption[Comoving scales and the Hubble radius]{Comoving scales that have recently
+entered the horizon would
 previously have been inside the horizon if the inflationary period extended far
 enough into the past.}
  \label{fig:comovingscales-intro}
