--- a/ihformat.sty
+++ b/ihformat.sty
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % 
 %  Ian Huston - ihformat.sty
 %  formatting and macros
-%  $Id: ihformat.sty,v 1.20 2009/10/05 15:19:58 ith Exp $
+%  $Id: ihformat.sty,v 1.21 2009/10/05 15:52:09 ith Exp $
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihformat}
@@ -19,7 +19,7 @@
 \def\version$#1,v #2 #3${} }%
 % \renewcommand{\version}[$#1,v #2 #3 #4$]{#2, #3}}%
 % Use the following line in each file to specify revision, date
-% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.20 2009/10/05 15:19:58 ith Exp $}
+% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.21 2009/10/05 15:52:09 ith Exp $}
 
 % Should we use showlabels? Set with labels option, default is off.
 \newboolean{@showlabels}
@@ -60,8 +60,7 @@
 \RequirePackage{fancyhdr}
 % % 
 
-\RequirePackage{subfig}
-\captionsetup{lofdepth=2}
+
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 % \RequirePackage{mathrsfs}
@@ -82,7 +81,7 @@
 
 % Hyperlinking without footnotes.
 \ifthenelse{\boolean{@usehyperref}}%
-{\RequirePackage[pdftex,colorlinks,hyperfootnotes=false]{hyperref}}%
+{\RequirePackage[pdftex,colorlinks,hyperfootnotes=false,linktocpage]{hyperref}}%
 {\newcommand{\hypersetup}[1]{}
 \newcommand{\url}[1]{#1}
 }%
@@ -90,6 +89,9 @@
 % Should we use showlabels?
 \ifthenelse{\boolean{@showlabels}}{\RequirePackage[inline]{showlabels}}{}
 
+%subfig package
+\RequirePackage{subfig}
+\captionsetup{lofdepth=2}
 % % % % % % % % % % 
 % fancyhdr settings
 % % % % % % % % % % 
