--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.32 2009/09/28 16:07:30 ith Exp $
+% $Id: thesis.tex,v 1.33 2009/10/05 15:52:19 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %  twoside,
@@ -26,7 +26,7 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.32 2009/09/28 16:07:30 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.33 2009/10/05 15:52:19 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -42,6 +42,7 @@ dbi/dbi,
 dbi/multibrane,
 numerical/perts,
 numerical/numerical,
+numerical/results,
 theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -67,11 +68,11 @@ theend
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 %\setcounter{tocdepth}{0}
 \tableofcontents
-% \listoffigures
+\listoffigures
 %\listoftables
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-% \onehalfspacing
+\onehalfspacing
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Main introduction
 \include{mainintro}
@@ -96,6 +97,7 @@ theend
 \label{part:numerical}
 \include{numerical/perts}
 \include{numerical/numerical}
+\include{numerical/results}
 % % % % % % % % % % % % % % % % % % % % % % % % %
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
