--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.7 2009/10/05 11:21:28 ith Exp $
+% $Id: perts.tex,v 1.8 2009/10/05 16:05:30 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.7 2009/10/05 11:21:28 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.8 2009/10/05 16:05:30 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -124,8 +124,8 @@ inflation.
 
 In Section \ref{sec:perts-num} we will give a brief outline of
 perturbation theory and describe the second order perturbation
-equations that will be numerically calculated. Section
-\ref{sec:numerics} describes the numerical implementation of the
+equations that will be numerically calculated. Chapter
+\ref{ch:numericalsystem} describes the numerical implementation of the
 calculation, including the initial conditions used and the
 computational requirements. We present the results of this calculation
 in Section \ref{sec:results} including a comparison of the second
@@ -282,7 +282,7 @@ will not reproduce them here but instead refer the interested reader to Section
 II B of \Rref{Malik:2006ir}.
 Using the perturbed Einstein equations, the Klein-Gordon equations above can be
 written in closed form at both first and second orders. These equations will
-form the basis of the numerical scheme described in Section \ref{sec:numerics}.
+form the basis of the numerical scheme described in Chapter \ref{ch:numericalsystem}.
 
 
 The dynamics of the scalar field becomes clearer in Fourier space but terms in
