--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.5 2009/10/05 15:52:09 ith Exp $
+% $Id: results.tex,v 1.6 2009/10/05 16:05:30 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.5 2009/10/05 15:52:09 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.6 2009/10/05 16:05:30 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -150,7 +150,7 @@ with the choice of $k$ range.  After horizon crossing the source terms
 are approximately equal. Before horizon crossing however there is a
 strict hierarchy with the smaller $k$ ranges, $K_1$ and $K_2$, leading to
 smaller source
-contributions.  As stated in Section \ref{sec:codetests}, $\Delta k$
+contributions.  As stated in Section \ref{sec:tests-num}, $\Delta k$
 should be at least as large as $\kmin$ in order to reduce the error to
 a minimum.
 % 
@@ -376,7 +376,7 @@ readily calculated.
 
 
 There are many possible next steps to improve the program outlined in
-Section \ref{sec:numerics}. Chief amongst these is to implement the
+Chapter \ref{ch:numericalsystem}. Chief amongst these is to implement the
 full source term equation (\ref{eq:KG2-source-ntime}). Although clearly
 more complicated than the slow roll case in \eq{eq:KG2-fourier-sr-ntime}
 only two more $\theta$ dependent terms need to be added to $A$--$D$ in
